--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.7",
+    "node-mocks-http": "^1.14.1",
     "nodemon": "^3.0.3",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
